<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/overlay_light_100"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/signup_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:layout_gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textStyle="bold"
        android:textSize="40sp"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="633dp"
        android:layout_gravity="center"
        android:elevation="5dp"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingTop="30dp"
        android:paddingRight="30dp"
        android:paddingBottom="35dp">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/activity_Signup_page_EditText_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:maxLines="1"
                    android:padding="@dimen/spacing_large"
                    android:singleLine="true" />


                <EditText
                    android:id="@+id/activity_Signup_page_EditText_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="@dimen/spacing_large"
                    android:singleLine="true" />


                <EditText
                    android:id="@+id/activity_Signup_page_EditText_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:padding="@dimen/spacing_large"
                    android:singleLine="true" />


                <EditText
                    android:id="@+id/activity_Signup_page_EditText_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="@dimen/spacing_large"
                    android:singleLine="true"
                    app:passwordToggleEnabled="true" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <Spinner
                        android:id="@+id/spinner_province"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="center_horizontal"
                        android:backgroundTint="@color/colorAccent"
                        android:padding="@dimen/spacing_large" />

                    <TextView
                        android:id="@+id/activity_Signup_page_TextView_province"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginLeft="@dimen/spacing_large"
                        android:background="@drawable/btn_rounded_white"
                        android:backgroundTint="@color/overlay_light_100"
                        android:paddingLeft="5dp"
                        android:paddingTop="@dimen/spacing_large"
                        android:paddingEnd="@dimen/spacing_large"
                        android:paddingRight="@dimen/spacing_large"
                        android:text=""
                        android:textColor="@color/overlay_dark_90"
                        android:textSize="18dp" />

                </FrameLayout>


                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Spinner
                        android:id="@+id/spinner_county"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="center_horizontal"
                        android:backgroundTint="@color/colorAccent"
                        android:padding="@dimen/spacing_large" />


                    <TextView
                        android:id="@+id/activity_Signup_page_TextView_county"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginLeft="@dimen/spacing_large"
                        android:background="@drawable/btn_rounded_white"
                        android:backgroundTint="@color/overlay_light_100"
                        android:paddingLeft="5dp"
                        android:paddingTop="@dimen/spacing_large"
                        android:paddingEnd="@dimen/spacing_large"
                        android:paddingRight="@dimen/spacing_large"
                        android:text=""
                        android:textColor="@color/overlay_dark_90"
                        android:textSize="18dp" />

                </FrameLayout>

                <EditText
                    android:id="@+id/activity_Signup_page_EditText_place"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/place"
                    android:maxLines="1"
                    android:padding="@dimen/spacing_large"
                    android:singleLine="true" />


                <Button
                    android:id="@+id/btn_sign_up"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/layout"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:background="@drawable/btn_rounded_white"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/save"
                    android:textColor="#fff"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <com.github.ybq.android.spinkit.SpinKitView xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/spin_kit"
                        style="@style/SpinKitView.Small.Circle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginRight="@dimen/spacing_large"
                        android:visibility="gone"
                        app:SpinKit_Color="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/text_view_load"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/loading"
                        android:visibility="gone" />

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>

</LinearLayout>
